Adiciona card onde será exibida a senha do dia

--- a/app/index.html
+++ b/app/index.html
@@ -9,18 +9,35 @@
 
 <div class="row no-p-no-m">
 	<div class="col-md-3">
+
+        <div class="card text-xs-center password-of-day">
+            <h1>1908</h1>
+        </div>
+
         <ul class="list-group">
             <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">14</span>
-                Cras justo odio
+                <span class="label label-default label-pill pull-xs-right">278</span>
+                Natan
             </li>
             <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">2</span>
-                Dapibus ac facilisis in
+                <span class="label label-default label-pill pull-xs-right">278</span>
+                Natan
             </li>
             <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">1</span>
-                Morbi leo risus
+                <span class="label label-default label-pill pull-xs-right">290</span>
+                Victor
+            </li>
+            <li class="list-group-item">
+                <span class="label label-default label-pill pull-xs-right">290</span>
+                Victor
+            </li>
+            <li class="list-group-item">
+                <span class="label label-default label-pill pull-xs-right">301</span>
+                Marcus
+            </li>
+            <li class="list-group-item">
+                <span class="label label-default label-pill pull-xs-right">301</span>
+                Marcus
             </li>
         </ul>
 	</div>
