Adicionados cards no formato correto em index.html

--- a/app/index.html
+++ b/app/index.html
@@ -11,105 +11,182 @@
 	<div class="col-md-3">
 
         <div class="card text-xs-center password-of-day">
-            <h1>1908</h1>
+            <h1 style="font-family: 'Arial Black';">1908</h1>
         </div>
 
         <ul class="list-group">
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">278</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">278</span>
                 Natan
             </li>
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">278</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">278</span>
                 Natan
             </li>
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">290</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">290</span>
                 Victor
             </li>
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">290</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">290</span>
                 Victor
             </li>
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">301</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">301</span>
                 Marcus
             </li>
-            <li class="list-group-item">
-                <span class="label label-default label-pill pull-xs-right">301</span>
+            <li class="list-group-item execucao">
+                <span class="label label-success label-pill pull-xs-right">301</span>
                 Marcus
             </li>
         </ul>
+
+        <div class="card text-xs-center" style="margin-top: 13px;">
+            <ul class="list-group list-group-flush">
+
+                <li class="list-group-item">
+                    <h4>Abertas: 289</h4>
+                </li>
+                <li class="list-group-item">
+                    <h4>Fechadas: 239</h4>
+                </li>
+            </ul>
+        </div>
 	</div>
-    <div class="col-md-9">
-        <div class="row">
+    <div class="col-md-9" style="padding: 0;">
+        <div class="row no-gutter">
 
-            <div class="card-deck-wrapper">
-                <div class="card-deck">
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
 
-                    <div class="card text-xs-center">
-                        <ul class="list-group list-group-flush">
+                        <h3 class="card-title">287</h3>
 
-                            <h3 class="card-title">287</h3>
+                        <li class="list-group-item">
+                            <h4>DiModa</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-                            <li class="list-group-item">
-                                <h4>Supermercado Santana</h4>
-                            </li>
-                            <li class="list-group-item">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </li>
-                        </ul>
-                    </div>
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
 
-                    <div class="card text-xs-center">
-                        <ul class="list-group list-group-flush">
+                        <h3 class="card-title">287</h3>
 
-                            <h3 class="card-title">287</h3>
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-                            <li class="list-group-item">
-                                <h4>Supermercado Santana</h4>
-                            </li>
-                            <li class="list-group-item">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </li>
-                        </ul>
-                    </div>
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
 
-                    <div class="card text-xs-center">
-                        <ul class="list-group list-group-flush">
+                        <h3 class="card-title">287</h3>
 
-                            <h3 class="card-title">287</h3>
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-                            <li class="list-group-item">
-                                <h4>Supermercado Santana</h4>
-                            </li>
-                            <li class="list-group-item">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </li>
-                        </ul>
-                    </div>
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
 
-                    <div class="card text-xs-center">
-                        <ul class="list-group list-group-flush">
+                        <h3 class="card-title">287</h3>
 
-                            <h3 class="card-title">287</h3>
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-                            <li class="list-group-item">
-                                <h4>Supermercado Santana</h4>
-                            </li>
-                            <li class="list-group-item">
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
-                            </li>
-                        </ul>
-                    </div>
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
 
+                        <h3 class="card-title">287</h3>
 
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
+
+                        <h3 class="card-title">287</h3>
+
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
+
+                        <h3 class="card-title">287</h3>
+
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <div class="card text-xs-center">
+                    <ul class="list-group list-group-flush">
+
+                        <h3 class="card-title">287</h3>
+
+                        <li class="list-group-item">
+                            <h4>Supermercado Santana</h4>
+                        </li>
+                        <li class="list-group-item">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </li>
+                    </ul>
                 </div>
             </div>
 
 
 
-
+        </div>
 
             <!-- END ROW-CARDS -->
 
